CAMEL-18963: upgrade openapi components to latest swagger versions (#10066)
* CAMEL-18963: upgrade openapi components to latest swagger versions
This allows support of all OpenAPI specification versions including OpenAPI 3.1.x
in the components camel-openapi-java and camel-rest-openapi.
The swagger.io dependencies are upgraded to the latest versions and the
apicurio dependency is dropped.
Due to this change, in camel-openapi-java, the return type of the public method
org.apache.camel.openapi.RestOpenApiReader.read() is now io.swagger.v3.oas.models.OpenAPI.
When an OpenAPI 2.0 (swagger) specification is parsed, it is automatically upgraded
to OpenAPI 3.0.x by the swagger parser.
In order to support the property openapi.version=2.0 in the openapi-java component, an OpenAPI3to2
converter has been added.
Tests are upgraded except RestOpenApiEndpointTest in camel-rest-openapi which tested apicurio-specific
classes.
A new test for OpenAPI 3.1 specifications is added.